--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: objective-c
 before_install:
   - brew update
   - brew outdated swiftlint || brew upgrade swiftlint
-  - carthage bootstrap --platform ios
+  - carthage build --platform ios
 script:
     - swiftlint
     - xcodebuild test -project SampleApp.xcodeproj -scheme SampleApp -destination 'platform=iOS Simulator,name=iPhone 7,OS=10.3.1'
