--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,3 +1,4 @@
 excluded: # paths to ignore during linting. Takes precedence over `included`.
   - Carthage
   - Pods
+  - SampleApp/SampleAppClient
